--- a/composer.json
+++ b/composer.json
@@ -82,5 +82,9 @@
             "require": "7.1.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "symfony/maker-bundle": "^1.61"
     }
 }
